--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,6 +19,9 @@
           <a class="nav-link js-scroll-trigger"  routerLink="/postovi" >Postovi</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link js-scroll-trigger"  routerLink="/product" >Proizvodi</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" routerLink="/contact" >Kontakt</a>
         </li>
        <!-- <li class="nav-item">
