--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,7 +1,6 @@
 <section class="bg-dark text-white"  [style.backgroundImage]="'url('+ slika.imageUrl +')'">
   <div class="container text-center">
-    <h2 class="mb-4">Najlepše što možemo doživeti je ono što je tajanstveno.
-       To je temeljni osećaj koji stoji u zametku svake umetnosti i nauke…</h2>
+    <h2 class="mb-4" id="citat" [ngStyle]="{'color':'#ff8000'}">Mojživot je moja poruka …</h2>
  
   </div>
 </section>
