--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -1,5 +1,7 @@
 
-<section id="contact"  [style.background-color]="'#6a7676'">
+<section id="contact"  
+[ngStyle]="{'background': ' url('+ pozadina.imageUrl +') no-repeat fixed'}"
+>
   <div class="container">
     <div class="row">
      
