--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -4,3 +4,7 @@ input[type='submit']:hover{
 input[type='submit']:disabled{
     background-color: #d5d6d6;
 }
+#citat{
+    font-family: Tangerine;
+    
+}
